Add delete Output operation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24457

--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeleteOperationOutput.cs" />
     <Compile Include="InsertOperationOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateOperationResult.cs" />
