--- a/Vanrise/Code/Vanrise.Integration.Web/Vanrise.Integration.Web.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Web/Vanrise.Integration.Web.csproj
@@ -106,6 +106,8 @@
     <Content Include="Integration\Views\DataSourceEditorController.js" />
     <Content Include="Integration\Views\DataSourceManagement.html" />
     <Content Include="Integration\Views\DataSourceManagementController.js" />
+    <Content Include="Integration\Views\DataSourceTaskEditor.html" />
+    <Content Include="Integration\Views\DataSourceTaskEditorController.js" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
@@ -119,6 +121,10 @@
     <ProjectReference Include="..\Vanrise.Integration.Entities\Vanrise.Integration.Entities.csproj">
       <Project>{bc343c8c-a1ba-4d9e-b4da-c59029594d50}</Project>
       <Name>Vanrise.Integration.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Runtime.Entities\Vanrise.Runtime.Entities.csproj">
+      <Project>{07b66e74-bd84-4023-b839-5bb522b7a98c}</Project>
+      <Name>Vanrise.Runtime.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\Vanrise.Web.Base\Vanrise.Web.Base.csproj">
       <Project>{c527c7b2-a481-4d1d-b25a-4a540e812153}</Project>
