Adding references Integration Module assemblies
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24477

--- a/CDRAnalysis/CDRAnalysis.Web/CDRAnalysis.Web.csproj
+++ b/CDRAnalysis/CDRAnalysis.Web/CDRAnalysis.Web.csproj
@@ -181,6 +181,9 @@
     <Reference Include="Vanrise.Integration.Entities">
       <HintPath>..\..\Vanrise\Code\Output\Vanrise.Integration.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Integration.Extensions">
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Integration.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Integration.Web">
       <HintPath>..\..\Vanrise\Code\Output\Vanrise.Integration.Web.dll</HintPath>
     </Reference>
