--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BigResult.cs" />
     <Compile Include="DeleteOperationOutput.cs" />
     <Compile Include="InsertOperationOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TempTableName.cs" />
     <Compile Include="UpdateOperationResult.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
