--- a/TOneV2/Code/TOneV2/TOne.CDRProcess/TOne.CDRProcess.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess/TOne.CDRProcess.csproj
@@ -80,6 +80,9 @@
     <Reference Include="Vanrise.Queueing">
       <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Queueing.Entities">
+      <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
