--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
@@ -100,20 +100,25 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.WFActivities.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Caching">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Caching.dll</HintPath>
+    <Reference Include="Vanrise.Caching, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Common">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Common.dll</HintPath>
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Data">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Data.dll</HintPath>
+    <Reference Include="Vanrise.Data, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Data.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Data.MySQL">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Data.MySQL.dll</HintPath>
+    <Reference Include="Vanrise.Data.MySQL, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Data.MySQL.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Data.SQL">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Data.SQL.dll</HintPath>
+    <Reference Include="Vanrise.Data.SQL, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Data.SQL.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Logging.SQL">
       <HintPath>..\Dependencies\VanriseFramework\Vanrise.Logging.SQL.dll</HintPath>
