--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.SQL/Vanrise.Fzero.FraudAnalysis.Data.SQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.SQL/Vanrise.Fzero.FraudAnalysis.Data.SQL.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Common.dll</HintPath>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Data, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
