--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.Entities/Vanrise.Fzero.CDRImport.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.Entities/Vanrise.Fzero.CDRImport.Entities.csproj
@@ -41,8 +41,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Vanrise.Common">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Common.dll</HintPath>
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Queueing, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
