--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
@@ -63,8 +63,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Entities.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Caching">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Caching.dll</HintPath>
+    <Reference Include="Vanrise.Caching, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Queueing, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
