--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
@@ -41,17 +41,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Vanrise.BusinessProcess">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.BusinessProcess.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.BusinessProcess.Client">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.BusinessProcess.Client.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.BusinessProcess.Entities">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.BusinessProcess.Entities.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.Common">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Common.dll</HintPath>
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Entities">
       <HintPath>..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
@@ -66,7 +58,7 @@
     </Reference>
     <Reference Include="Vanrise.Runtime, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Runtime.dll</HintPath>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
