--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Enumerations.cs" />
     <Compile Include="GenericEntity.cs" />
     <Compile Include="GenericEntityStatus.cs" />
+    <Compile Include="OperationResults\DeleteOperationOutput.cs" />
     <Compile Include="OperationResults\InsertOperationOutput.cs" />
     <Compile Include="OperationResults\UpdateOperationOutput.cs" />
     <Compile Include="Report\IReportGenerator.cs" />
