Created the org charts management page.
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24549

--- a/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
+++ b/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessEntityManager.cs" />
+    <Compile Include="OrgChartManager.cs" />
     <Compile Include="SecurityContext.cs" />
     <Compile Include="ViewManager.cs" />
     <Compile Include="MenuManager.cs" />
