--- a/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BusinessEntityManager.cs" />
     <Compile Include="BusinessEntityModuleDataManager.cs" />
     <Compile Include="ModuleDataManager.cs" />
+    <Compile Include="OrgChartDataManager.cs" />
     <Compile Include="PermissionDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleDataManager.cs" />
