--- a/Vanrise/Code/Vanrise.Security.Data/Vanrise.Security.Data.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data/Vanrise.Security.Data.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IBusinessEntityModuleDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="IModuleDataManager.cs" />
+    <Compile Include="IOrgChartDataManager.cs" />
     <Compile Include="IPermissionDataManager.cs" />
     <Compile Include="IRoleDataManager.cs" />
     <Compile Include="IUserDataManager.cs" />
