--- a/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
@@ -53,6 +53,7 @@
     <Compile Include="BusinessEntityModule.cs" />
     <Compile Include="MenuItem.cs" />
     <Compile Include="Module.cs" />
+    <Compile Include="OrgChart.cs" />
     <Compile Include="Permission.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomPasswordHelper.cs" />
