--- a/Vanrise/Code/Vanrise.Integration.Extensions/Vanrise.Integration.Extensions.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Extensions/Vanrise.Integration.Extensions.csproj
@@ -47,6 +47,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Integration.Business\Vanrise.Integration.Business.csproj">
+      <Project>{1f22483a-d3db-48ee-aea8-8988bdb3b9a1}</Project>
+      <Name>Vanrise.Integration.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Integration.Entities\Vanrise.Integration.Entities.csproj">
+      <Project>{bc343c8c-a1ba-4d9e-b4da-c59029594d50}</Project>
+      <Name>Vanrise.Integration.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Runtime.Entities\Vanrise.Runtime.Entities.csproj">
       <Project>{07b66e74-bd84-4023-b839-5bb522b7a98c}</Project>
       <Name>Vanrise.Runtime.Entities</Name>
