added ImportedData to Receive Adapters
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24570

--- a/Vanrise/Code/Vanrise.Integration.Entities/Vanrise.Integration.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Entities/Vanrise.Integration.Entities.csproj
@@ -46,7 +46,11 @@
     <Compile Include="BaseReceiveAdapter.cs" />
     <Compile Include="DataSource.cs" />
     <Compile Include="DataSourceAdapterType.cs" />
+    <Compile Include="ImportedDataTypes\DBReaderImportedData.cs" />
+    <Compile Include="ImportedDataTypes\ExcelFileImportedData.cs" />
+    <Compile Include="ImportedDataTypes\IImportedData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ImportedDataTypes\TextImportedData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
