implementing classes for images and text permission in BI
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24578

--- a/TOneV2/Code/TOneV2/TOne.BI.Web/TOne.BI.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/TOne.BI.Web.csproj
@@ -127,6 +127,8 @@
     <Content Include="BI\Constants\BIEntityTypeEnum.js" />
     <Content Include="BI\Constants\BIMeasureTypeEnum.js" />
     <Content Include="BI\Constants\BITimeDimensionTypeEnum.js" />
+    <Content Include="BI\Directives\Images\bichartpermission.jpg" />
+    <Content Include="BI\Directives\Images\chartpermission.jpg" />
     <Content Include="BI\Directives\Templates\vr-chart-bi-directive-template.html" />
     <Content Include="BI\Directives\Templates\vr-chart-bi-directive-template.js" />
     <Content Include="BI\Directives\Templates\vr-datagrid-bi-directive-template.html" />
