--- a/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition.Entities/TOne.WhS.TOneV1Transition.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition.Entities/TOne.WhS.TOneV1Transition.Entities.csproj
@@ -44,10 +44,19 @@
     <Reference Include="Vanrise.Entities">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Runtime.Entities">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Runtime.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\TOneV1TransitionSettingsData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TOne.WhS.DBSync.Business\TOne.WhS.DBSync.Business.csproj">
+      <Project>{66a454c0-d24c-4378-942f-4b7bc0f1e05a}</Project>
+      <Name>TOne.WhS.DBSync.Business</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
