export excel remotely
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39698

--- a/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
+++ b/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
@@ -81,6 +81,7 @@
     <Compile Include="BusinessManagers\IBusinessManager.cs" />
     <Compile Include="BusinessManagers\ITypeManager.cs" />
     <Compile Include="DataRetrieval\ConvertResultToExcelDataContext.cs" />
+    <Compile Include="DataRetrieval\RemoteExcelManager.cs" />
     <Compile Include="DataRetrieval\ExcelManager.cs" />
     <Compile Include="PasswordGenerator.cs" />
     <Compile Include="PathResolver.cs" />
