--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -231,7 +231,7 @@
     <Content Include="Client\Javascripts\Directives\Chart\vr-gauge-chart-directive.js" />
     <Content Include="Client\Javascripts\Directives\Chart\vr-chart-settings.html" />
     <Content Include="Client\Javascripts\Directives\Chart\vr-chart.html" />
-    <Content Include="Client\Javascripts\Directives\Chart\vr-guage-chart-template.html" />
+    <Content Include="Client\Javascripts\Directives\Chart\vr-gauge-chart-template.html" />
     <Content Include="Client\Javascripts\Directives\Chart\vr-solidgauge-chart-directive.js" />
     <Content Include="Client\Javascripts\Directives\Containers\vr-dropdown-section.js" />
     <Content Include="Client\Javascripts\Directives\Containers\vr-section-v2.js" />
