--- a/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
@@ -47,6 +47,8 @@
     <Compile Include="BigDataServiceDataManager.cs" />
     <Compile Include="CityDataManager.cs" />
     <Compile Include="StatusDefinitionDataManager.cs" />
+    <Compile Include="VRActionAuditDataManager.cs" />
+    <Compile Include="VRActionAuditLKUPDataManager.cs" />
     <Compile Include="VRApplicationVisibilityDataManager.cs" />
     <Compile Include="VRConnectionDataManager.cs" />
     <Compile Include="UserActionAuditDataManager.cs" />
