--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -69,6 +69,8 @@
     <Compile Include="ComponentType\VRComponentTypeManager.cs" />
     <Compile Include="ConfigManager.cs" />
     <Compile Include="StatusDefinitionFilterContext.cs" />
+    <Compile Include="VRActionAudit\VRActionAuditLKUPManager.cs" />
+    <Compile Include="VRActionAudit\VRActionAuditManager.cs" />
     <Compile Include="VRApplicationVisibility\VRApplicationVisibilityManager.cs" />
     <Compile Include="VRConnections\SQLConnection.cs" />
     <Compile Include="VRConnections\VRConnectionManager.cs" />
