Implemented the Sale Rate History grids
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39739

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -145,6 +145,7 @@
     <Compile Include="SaleRate\History\CustomerZoneRateHistoryRecord.cs" />
     <Compile Include="SaleRate\History\SellingProductZoneRateHistoryQuery.cs" />
     <Compile Include="SaleRate\History\SellingProductZoneRateHistoryRecord.cs" />
+    <Compile Include="SellingProduct\ProcessedCustomerSellingProduct.cs" />
     <Compile Include="Settings\PurchaseAreaSettingsData.cs" />
     <Compile Include="Settings\SaleAreaSettingsData.cs" />
     <Compile Include="SaleCode\Query\SaleCodeQuery.cs" />
